[package]

	name = "fix-whitespace"
	version = "1.0.2"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	edition = "2021"
	description = "Detect and correct whitespace issues in text files"
	readme = "README.md"
	homepage = "https://gitlab.wellbehavedsoftware.com/james/fix-whitespace"
	repository = "https://gitlab.wellbehavedsoftware.com/james/fix-whitespace"
	license = "Apache-2.0"

[dependencies]

	clap = { version = "4.0", features = [ "derive", "env" ] }
	lazy_static = "1.4"
	regex = "1.6"
